src/components/navbar/navbar.css
.nav-container {
    color: #d4d4d4;
    height:100vh;
    width: 8vw;
    background-image: url(../../images/navbar-background.png);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    z-index: 3;
    position: absolute;
    margin-left: 92vw;
}

.nav-links {
    height: 100vh;
    display: flex;
    flex-direction: column;
    color: #d4d4d4;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.nav-links h1:hover{
    cursor: pointer;
}

.nav-links a {
    text-decoration: none;
}

.nav-links a:visited {
    text-decoration: none;
}


.nav-link {
    transform: rotate(-90deg);
    font-size: 2vw;
    width: 20vh;
    text-align: center;
}

@media only screen and (max-device-width: 450px) {
    .nav-link {
        font-size: 1.8vh;
    }
}

